# askkit

./: .prettierrc  README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/migrations/: 20250904235511_001_initial_create.down.sql  20250904235511_001_initial_create.up.sql  20250905040403_002_chat_messages_status.down.sql  20250905040403_002_chat_messages_status.up.sql  20250905052517_003_created_at_and_status.down.sql  20250905052517_003_created_at_and_status.up.sql  20250906102631_004_agent.down.sql  20250906102631_004_agent.up.sql  20250919175908_005_google_provider.down.sql  20250919175908_005_google_provider.up.sql  20250919182452_006_groq_provider.down.sql  20250919182452_006_groq_provider.up.sql
src-tauri/src/: agent.rs  chat.rs  cipher.rs  common.rs  launcher.rs  lib.rs  main.rs
src-tauri/src/agent/: cmds.rs  gemini.rs  google.rs  groq.rs  repo.rs
src-tauri/src/agent/repo/: sqlite.rs
src-tauri/src/chat/: cmds.rs  mod.rs  repo.rs  utils.rs
src-tauri/src/chat/repo/: sqlite.rs
src-tauri/src/codec/: sse.rs
src-tauri/src/common/: agent.rs  agent_gemini.rs  entity.rs  error.rs  errors.rs  http.rs  mod.rs  unit_of_work.rs
src-tauri/src/common/entity/: agent.rs  chat.rs  user.rs
src-tauri/src/launcher/: cmds.rs  mod.rs  shortcuts.rs  window.rs
src/lib/common/: error.ts  launcher.svelte.ts  models.ts  queries.ts  query.ts  runtime.ts  styles.ts  tauri.ts
src/lib/components/: Select.svelte  builders.svelte.ts  icons.ts
src/lib/stylesheets/: c-button.css  c-label.css
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/launcher/: +layout.svelte  +page.svelte  AgentScreen.svelte  Greetings.svelte  SelectAgent.svelte  persisted.svelte.ts
(+6 files in other folders)
