[package]
name = "askkit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "askkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
log = "0.4.27"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
thiserror = "2.0.16"
futures-util = "0.3.31"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "time",
    "uuid",
    "runtime-tokio",
] }
slug = "0.1.6"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1.89"
keyring = { version = "3.6.3", features = ["windows-native"] }
rand = "0.9.2"
aes-gcm = "0.10.3"
tokio = { version = "1.47.1", features = ["full"] }


[profile.dev]
incremental = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
